# llama-swap-setup

./: .env  .env.cpu  .env.cuda  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  entrypoint.sh  get-docker-socket.sh  llama-swap.Dockerfile  models.json  pyproject.toml  watch-config.sh
configs/: config.base.yaml  config.cpu.yaml  config.yaml
configs/templates/: config.base.yaml
